--- a/SkToisso/index.html
+++ b/SkToisso/index.html
@@ -18,8 +18,8 @@
 			<nav>
 
 				<ul class="acesso">
-					<li>Entrar</li>
-					<li>Cadastro</li>
+					<li><a href="entrar.html">Entrar</a></li>
+					<li><a href="cadastro.html">Cadastro</a></li>
 				</ul>
 				
 				<ul class="navegacao">
