--- a/SkToisso/index.html
+++ b/SkToisso/index.html
@@ -12,31 +12,17 @@
 	<body>
 		<header>
 
-			<img src="Skate logo.jpg">
+			<img class="logo" src="Imagens/Skate logo.jpg">
 			<h1>Bela Vista SkateShop</h1>
 
-			<nav>
-
-				<ul class="acesso">
-					<li><a href="entrar.html">Entrar</a></li>
-					<li><a href="cadastro.html">Cadastro</a></li>
-				</ul>
-				
+			<nav>				
 				<ul class="navegacao">
 					<li><a href="index.html">Início</a></li>	
 					<li><a href="conteudo.html">Conteúdo</a></li>
 					<li><a href="loja.html">Loja</a></li>
 					<li><a href="app.html">Aplicativo</a></li>
 				</ul>		
-
-				<select>
-					<option>BR</option>
-					<option>EUA</option>
-				</select>
-				<button>↑</button>
 			</nav>
-			
-
 			
 		</header>
 		<hr>
@@ -47,7 +33,7 @@
 
 			<div class="conteudo">	
 
-				<p class="sobre-loja"><img src="SkateShop.jpg" class="logo-conteudo">A Toisso SkateShop está a mais de 5 anos fortalecendo o skate local com eventos e campeonatos para todas as categorias.</p>
+				<p class="sobre-loja"><img src="Imagens/SkateShop.jpg" class="logo-conteudo">A Toisso SkateShop está a mais de 5 anos fortalecendo o skate local com eventos e campeonatos para todas as categorias.</p>
 				<p class="sobre-loja">É uma loja de Skate bem localizada e com todos os acessórios disponíveis, desde um skate mais simples com todos os quesitos necessários para aprender manobras, até o skate profissional de alta qualidade com peças importadas das mais famosas marcas.</p>
 				
 			</div>
@@ -73,9 +59,9 @@
 				<p class="sobre">Para mais informações entre em contato!</p>
 
 				<div class="lista-redes">
-					<a href="https://www.linkedin.com/feed/?trk=homepage-basic_signin-form_submit" target="_blank"><img src="facebook-logo.png" class="redes-sociais"></a>
-					<a href="https://www.linkedin.com/feed/?trk=homepage-basic_signin-form_submit" target="_blank"><img src="instagram-logo.png" class="redes-sociais"></a>
-					<a href="https://www.linkedin.com/feed/?trk=homepage-basic_signin-form_submit" target="_blank"><img src="whatsapp-logo.png" class="redes-sociais"></a>
+					<a href="https://www.linkedin.com/feed/?trk=homepage-basic_signin-form_submit" target="_blank"><img src="Imagens/facebook-logo.png" class="redes-sociais"></a>
+					<a href="https://www.linkedin.com/feed/?trk=homepage-basic_signin-form_submit" target="_blank"><img src="Imagens/instagram-logo.png" class="redes-sociais"></a>
+					<a href="https://www.linkedin.com/feed/?trk=homepage-basic_signin-form_submit" target="_blank"><img src="Imagens/whatsapp-logo.png" class="redes-sociais"></a>
 				</div>
 			</div>
 
